# MagicPixelEngine

./: .gitignore  CMakeLists.txt  Dockerfile  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Global.cpp  Global.hpp  README.md  build.sh  main.cpp
Chunk/: Chunk.cpp  Chunk.h  Chunk.hpp
Core/: Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  Global.cpp  Global.hpp  InputManager.cpp  InputManager.hpp
Data Structures/: Fenwick.cpp  Fenwick.hpp  RandomAcessTable.hpp  Vector2.hpp
ECS/: Components.hpp  ECS.hpp  Sprite.hpp  Texture.cpp  Texture.hpp
Geometry/: Rectangle.cpp  Rectangle.hpp
Graphics/: Button.cpp  Button.hpp  Color.cpp  Graphics.cpp  Graphics.hpp  Text.hpp  Texture.cpp  Texture.hpp  UI.cpp  UI.hpp
MagicPixel/: Gas.cpp  Gas.hpp  Liquid.cpp  MagicPixel.cpp  MagicPixel.hpp  MaterialType.hpp  Movable.cpp  Movable.hpp  Solid.cpp
Material/: Gas.cpp  Liquid.hpp  Material.hpp  MaterialType.hpp  Movable.cpp  Movable.hpp  Rock.cpp  Rock.hpp  Sand.cpp  Sand.hpp  Solid.hpp  Water.cpp  Water.hpp
Material/Base/: Fire.cpp  Gas.cpp  Gas.hpp  Liquid.hpp
Material/Custom/: Fire.cpp  Fire.h  Rock.cpp  Rock.hpp  Sand.cpp  Sand.hpp  Steam.cpp  Steam.h  Water.cpp  Water.hpp  Wood.cpp  Wood.h
Simulation/: Buffer.cpp  Buffer.hpp  Cell.cpp  Cell.hpp  Simulation.cpp  Simulation.hpp
Thread/: Job.cpp  Job.hpp  ThreadPool.cpp
Utility/: Color.hpp  Graphics.cpp  Graphics.hpp  Helper.cpp  Helper.hpp  Movable.cpp  Movable.hpp  Random.cpp  Random.h  Random.hpp
app/: CMakeLists.txt  main.cc  main.cpp
app/src/: main.cpp
cmake/: SDL.cmake  SDL2_ttf.cmake
editor/: Engine.cpp  Engine.h
editor/widgets/: Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Viewer.cpp  Viewer.h
engine/: CMakeLists.txt  engine.h
engine/characters/: character.cc  character.h
engine/common/geometry/: vector.cc  vector.h
engine/common/thread/: job.cc  job.cpp  job.h  thread_pool.cc  thread_pool.h
engine/common/utility/: helper.cpp  helper.h  navigation.cc  navigation.cpp  navigation.h  random.cpp  random.h
engine/core/: camera.cc  camera.h  engine.cc  engine.h  entity.cc  entity.h  game.cc  game.cpp  game.h  game_object.cc  game_object.h  global.cc  global.cpp  global.h  input_manager.cc  input_manager.cpp  input_manager.h  renderer.cc  renderer.h  window.cc  window.h
engine/editor/widgets/: hierarchy.cc  hierarchy.h  inspector.cc  inspector.cpp  viewer.cc  viewer.cpp
engine/graphics/: button.cc  button.cpp  button.h  color.cc  color.cpp  color.h  graphics.cc  graphics.h  sprite.h  text.cc  text.cpp  text.h  texture.cc  texture.cpp  texture.h  ui.cc  ui.h
engine/graphics/font/: font.cc  font.h
engine/graphics/ui/: ui.cc  ui.h  ui_component.h
engine/graphics/ui/components/button/: button.cc  button.h  button_group.cc  button_group.h  button_text.cc  button_text.h
engine/graphics/ui/components/text/: text.cc  text.h
engine/magicpixel/: magic_pixel.cc  magic_pixel.cpp  magic_pixel.h  magic_pixel_factory.cc  magic_pixel_factory.h
engine/magicpixel/material/: material_type.cpp  material_type.h
engine/magicpixel/material/attribute/: movable.cc  movable.cpp  movable.h
engine/magicpixel/material/base/: fire.cc  fire.cpp  fire.h  gas.cc  gas.cpp  gas.h  liquid.cc  liquid.cpp  liquid.h  solid.cc  solid.cpp  solid.h  static.cc  static.cpp  static.h
engine/magicpixel/material/custom/: ice.cc  ice.h  lava.cc  lava.h  oil.cc  oil.h  rock.cc  rock.h  sand.cc  sand.h  steam.cc  steam.h  sun.cc  sun.h  water.cc  water.cpp  water.h  wood.cc  wood.cpp  wood.h
engine/simulation/: buffer.cc  buffer.cpp  buffer.h  cell.cc  cell.cpp  cell.h  chunk.cc  chunk.cpp  chunk.h  simulation.cc  simulation.cpp  simulation.h
game/Chunk/: Chunk.cpp
game/Core/: Global.cpp  InputManager.cpp
game/Geometry/: Rectangle.cpp  Vector2.cpp
game/Graphics/: Button.cpp  Button.hpp  Color.cpp  Color.hpp  Text.cpp
game/MagicPixel/: MagicPixelFactory.cpp  MagicPixelFactory.hpp  MaterialType.hpp
game/Material/: Movable.hpp
game/Material/Base/: Gas.cpp  Liquid.cpp  Solid.cpp  Solid.hpp  Static.cpp  Static.h
game/Material/Custom/: Rock.hpp  Sand.cpp  Steam.cpp
game/Simulation/: Buffer.cpp  Cell.cpp  Cell.hpp  Simulation.cpp
game/Thread/: Job.hpp  ThreadPool.cpp  ThreadPool.hpp
game/Utility/: Navigation.h  Random.cpp
imgui/: imgui_impl_sdlrenderer.cpp
